version/0.6/_sources/api/_autosummary/ansys.sherlock.core.project.Project.rst.txt
ansys.sherlock.core.project.Project
===================================

.. currentmodule:: ansys.sherlock.core.project

.. autoclass:: Project

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      Project.add_cca
      
      
      Project.add_project
      
      
      Project.add_strain_maps
      
      
      Project.add_thermal_maps
      
      
      Project.delete_project
      
      
      Project.generate_project_report
      
      
      Project.import_ipc2581_archive
      
      
      Project.import_odb_archive
      
      
      Project.import_project_zip_archive
      
      
      Project.import_project_zip_archive_single_mode
      
      
      Project.list_ccas
      
      
      Project.list_strain_maps
      
      
      Project.list_thermal_maps
      
      
      Project.update_thermal_maps
      
   
   

   
   
   